unpackaged/main/default/objects/Contact/fields/Is_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Is_Volunteer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Volunteer</label>
    <type>Checkbox</type>
</CustomField>