unpackaged/main/default/objects/Contact/fields/PasswordToken__c.field-meta.xml
<CustomField>
    <fullName>PasswordToken__c</fullName>
    <description>Holds the password of community member</description>
    <label>PasswordToken</label>
    <length>8</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>