unpackaged/main/default/objects/Contact/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Unique identifier for the Community Member used for login purposes. This username is provided upon registration approval and is required for accessing their account.</description>
    <label>Username</label>
    <length>35</length>
    <type>Text</type>
</CustomField>