unpackaged/main/default/objects/Contact/recordTypes/Community_Mermber.recordType-meta.xml
<RecordType>
    <fullName>Community_Mermber</fullName>
    <active>true</active>
    <description>To store information of Community Members within the organization</description>
    <label>Community Mermber</label>
</RecordType>