unpackaged/main/default/objects/Contact/recordTypes/Volunteer.recordType-meta.xml
<RecordType>
    <fullName>Volunteer</fullName>
    <active>true</active>
    <description>To store information specifically for individuals who volunteer within the organization.</description>
    <label>Volunteer</label>
</RecordType>